<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <import type="com.bigtime.data.api.Status" />

        <import type="com.bigtime.data.api.Resource" />

        <variable
            name="resultCount"
            type="int" />


        <variable
            name="searchResource"
            type="Resource" />

        <variable
            name="callback"
            type="com.bigtime.ui.RetryCallback" />
    </data>

        <androidx.core.widget.NestedScrollView
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:fillViewport="true"

			app:layout_behavior="@string/appbar_scrolling_view_behavior"
	        android:id="@+id/parentView"
	        app:layout_constraintTop_toTopOf="parent">
	            <androidx.constraintlayout.widget.ConstraintLayout
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
					android:padding="@dimen/main_padding"
		            android:background="@color/white">



		            <androidx.appcompat.widget.AppCompatTextView
			            android:layout_width="0dp"
			            android:layout_height="wrap_content"
			            android:id="@+id/textLotSize"
			            android:text="@string/ChooseLotSize"
						android:fontFamily="@font/medium"
						android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			            android:textColor="@color/activeText"
						app:layout_constraintStart_toStartOf="parent"
			            app:layout_constraintEnd_toStartOf="@+id/l_size"
			            app:layout_constraintTop_toTopOf="@id/l_size"
			            app:layout_constraintBottom_toBottomOf="@id/l_size"
			            />

					<LinearLayout
						android:id="@+id/l_size"
						android:layout_width="wrap_content"
						android:orientation="horizontal"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						android:background="@drawable/border_graylight_graylight2"
						android:layout_height="@dimen/iconHeight">
						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="@dimen/iconHeight"
							android:layout_height="match_parent"
							android:id="@+id/lotDecrement"
							android:text="@string/minus"
							android:gravity="center"
							style="@style/Text.Title.Medium"
							android:textColor="@color/red"/>
						<com.google.android.material.textfield.TextInputEditText
							android:layout_width="80dp"
							android:layout_height="match_parent"
							android:inputType="number"
							android:id="@+id/lotValue"
							style="@style/Text.Medium.Medium"
							tools:text="8"
							android:maxLength="2"
							android:textColor="@color/colorAccent"
							android:gravity="center"
							android:background="@drawable/border_gray_white"/>

						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="@dimen/iconHeight"
							android:layout_height="match_parent"
							android:id="@+id/lotIncrement"
							android:text="@string/plus"
							android:gravity="center"
							style="@style/Text.Title.Medium"
							android:textColor="@color/colorAccent"/>






					</LinearLayout>


		            <androidx.appcompat.widget.AppCompatTextView
			            android:layout_width="0dp"
			            android:layout_height="wrap_content"
			            android:id="@+id/lotError"
			            android:text="Invalid Size"
						android:gravity="center"
			            android:visibility="invisible"
			            app:layout_constraintTop_toBottomOf="@+id/l_size"
			            android:textColor="@color/red"
						app:layout_constraintEnd_toEndOf="@+id/l_size"
			            app:layout_constraintStart_toStartOf="@id/l_size"/>


		            <View
			            android:layout_width="0dp"
			            android:layout_height="1dp"
			            android:id="@+id/separator1"
			            app:layout_constraintTop_toBottomOf="@+id/l_size"
			            app:layout_constraintStart_toStartOf="parent"
			            app:layout_constraintEnd_toEndOf="parent"
			            android:background="@color/gray_light"
			            android:layout_marginTop="@dimen/main_padding"/>


					<LinearLayout
						android:id="@+id/l_moq"
						android:layout_width="wrap_content"
						android:orientation="horizontal"
						android:layout_marginTop="@dimen/main_padding"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/separator1"
						android:background="@drawable/border_graylight_graylight2"
						android:layout_height="@dimen/iconHeight">
						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="@dimen/iconHeight"
							android:layout_height="match_parent"
							android:id="@+id/moqDecrement"
							android:text="@string/minus"
							android:gravity="center"
							style="@style/Text.Title.Medium"
							android:textColor="@color/red"/>

						<com.google.android.material.textfield.TextInputEditText
							android:layout_width="80dp"
							android:layout_height="match_parent"
							android:id="@+id/moqValue"
							style="@style/Text.Medium.Medium"
							tools:text="8"
							android:maxLength="4"
							android:background="@drawable/border_gray_white"
							android:inputType="number"
							android:textColor="@color/colorAccent"
							android:gravity="center"/>

						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="@dimen/iconHeight"
							android:layout_height="match_parent"
							android:id="@+id/moqIncrement"
							android:text="@string/plus"
							android:gravity="center"
							style="@style/Text.Title.Medium"
							android:textColor="@color/colorAccent"/>
					</LinearLayout>


					<androidx.appcompat.widget.AppCompatTextView
			            android:layout_width="0dp"
			            android:layout_height="wrap_content"
			            android:id="@+id/textMOQ"
			            android:text="@string/chooseMOQ"
						android:fontFamily="@font/medium"
			            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			            android:textColor="@color/activeText"
			            app:layout_constraintEnd_toStartOf="@+id/l_moq"
			            app:layout_constraintStart_toStartOf="parent"
			            app:layout_constraintTop_toTopOf="@id/l_moq"
			            app:layout_constraintBottom_toBottomOf="@id/l_moq"
			            />





		            <androidx.appcompat.widget.AppCompatTextView
			            android:layout_width="0dp"
			            android:layout_height="wrap_content"
			            android:id="@+id/moqError"
			            android:text="Invalid Moq"
			            android:visibility="invisible"
			            app:layout_constraintTop_toBottomOf="@+id/l_moq"
			            android:textColor="@color/red"
						app:layout_constraintEnd_toEndOf="@+id/l_moq"
			            app:layout_constraintStart_toStartOf="@id/l_moq"/>





		            <View
			            android:layout_width="0dp"
			            android:layout_height="1dp"
			            android:id="@+id/separator2"
			            app:layout_constraintTop_toBottomOf="@+id/l_moq"
			            app:layout_constraintStart_toStartOf="parent"
			            app:layout_constraintEnd_toEndOf="parent"
			            android:background="@color/gray_light"
			            android:layout_marginTop="20dp"/>





		            <androidx.appcompat.widget.AppCompatTextView
			            android:layout_width="0dp"
			            android:layout_height="wrap_content"
			            android:id="@+id/selectCategory"
			            android:text="@string/selectCategory"
			            android:fontFamily="@font/medium"
						android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			            android:textColor="@color/activeText"
			            app:layout_constraintStart_toStartOf="parent"
			            android:layout_marginTop="@dimen/main_padding"
			            app:layout_constraintTop_toBottomOf="@+id/separator2"
			            />


		            <LinearLayout
			            android:layout_width="0dp"
			            android:layout_height="wrap_content"
			            android:orientation="horizontal"
			            android:id="@+id/layoutMen"
			            android:paddingLeft="@dimen/seperator"
			            android:paddingRight="@dimen/seperator"
			            android:paddingTop="@dimen/normal_padding"
			            android:paddingBottom="@dimen/normal_padding"
			            android:layout_marginTop="@dimen/main_padding"
			            android:background="@drawable/border_graylight_graylight2"
			            android:gravity="center_vertical"
			            app:layout_constraintEnd_toStartOf="@id/layoutWomen"
			            app:layout_constraintTop_toBottomOf="@+id/selectCategory"
			            app:layout_constraintStart_toStartOf="parent">

			            <RadioButton
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:id="@+id/radioBtnMen"/>

			            <androidx.appcompat.widget.AppCompatImageView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
							android:padding="@dimen/seperator"
				            android:src="@drawable/ic_men"/>

			            <androidx.appcompat.widget.AppCompatTextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/men"
							android:fontFamily="@font/medium"
							android:padding="@dimen/seperator"
							android:textColor="@color/activeText"/>

		            </LinearLayout>

		            <LinearLayout
			            android:layout_width="0dp"
			            android:layout_height="wrap_content"
			            android:orientation="horizontal"
			            android:id="@+id/layoutWomen"
						android:layout_marginLeft="@dimen/main_padding"
						android:paddingLeft="@dimen/seperator"
						android:paddingRight="@dimen/seperator"
						android:paddingTop="@dimen/normal_padding"
						android:paddingBottom="@dimen/normal_padding"
			            android:gravity="center_vertical"
			            android:background="@drawable/border_graylight_graylight2"
			            app:layout_constraintEnd_toEndOf="parent"
			            app:layout_constraintTop_toTopOf="@id/layoutMen"
			            app:layout_constraintTop_toBottomOf="@+id/selectCategory"
			            app:layout_constraintStart_toEndOf="@+id/layoutMen">


			            <RadioButton
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:id="@+id/radioBtnWomen"/>

			            <androidx.appcompat.widget.AppCompatImageView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="@dimen/seperator"
				            android:src="@drawable/ic_women"/>

			            <androidx.appcompat.widget.AppCompatTextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/women"
							android:fontFamily="@font/medium"
							android:padding="@dimen/seperator"
				            android:textColor="@color/activeText"/>

		            </LinearLayout>

		            <LinearLayout
			            android:layout_width="0dp"
			            android:layout_height="wrap_content"
			            android:orientation="horizontal"
			            android:id="@+id/layoutKids"
						android:layout_marginTop="@dimen/main_padding"
						android:paddingLeft="@dimen/seperator"
						android:paddingRight="@dimen/seperator"
						android:paddingTop="@dimen/normal_padding"
						android:paddingBottom="@dimen/normal_padding"
			            android:background="@drawable/border_graylight_graylight2"
			            android:gravity="center_vertical"
			            app:layout_constraintTop_toBottomOf="@+id/layoutMen"
			            app:layout_constraintStart_toStartOf="@id/layoutMen"
			            app:layout_constraintEnd_toEndOf="@id/layoutMen">


			             <RadioButton
				             android:layout_width="wrap_content"
				             android:layout_height="wrap_content"
				             android:id="@+id/radioBtnKids"/>

			            <androidx.appcompat.widget.AppCompatImageView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:padding="@dimen/seperator"
				            android:src="@drawable/ic_kid"/>

			            <androidx.appcompat.widget.AppCompatTextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/kids"
							android:fontFamily="@font/medium"
							android:padding="@dimen/seperator"
							android:textColor="@color/activeText"/>


		            </LinearLayout>



	            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.core.widget.NestedScrollView>




        <!--<Button
            android:id="@+id/btn_next"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Next"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />-->



</layout>